--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       
       
       <nav class="navigation__wrapper">
-        <ul class="inner">
+        <ul class="inner navigation__inner">
           <li class="navigation__icon">
             <a><i class="fab fa-facebook-f fa-2x"></i></a>
           </li>
