--OUR LATEST WORKのaタグにclassを追加しました。 --aタグにhrefを追加しました。

--- a/index.html
+++ b/index.html
@@ -55,22 +55,22 @@
           
           <ul class="works__content">
             <li class="works__images">
-              <a><img src="img/01.jpg" alt=""></a>
+              <a href="#" class="works_hover"><img src="img/01.jpg" alt=""></a>
             </li>
             <li class="works__images">
-              <a><img src="img/02.jpg" alt=""></a>
+              <a href="#" class="works_hover"><img src="img/02.jpg" alt=""></a>
             </li>
             <li class="works__images">
-              <a><img src="img/03.jpg" alt=""></a>
+              <a href="#" class="works_hover"><img src="img/03.jpg" alt=""></a>
             </li>
             <li class="works__images">
-              <a><img src="img/04.jpg" alt=""></a>
+              <a href="#" class="works_hover"><img src="img/04.jpg" alt=""></a>
             </li>
             <li class="works__images">
-              <a><img src="img/05.jpg" alt=""></a>
+              <a href="#" class="works_hover"><img src="img/05.jpg" alt=""></a>
             </li>
             <li class="works__images">
-              <a><img src="img/06.jpg" alt=""></a>
+              <a href="#" class="works_hover"><img src="img/06.jpg" alt=""></a>
             </li>
           </ul>
           
@@ -119,16 +119,16 @@
       <nav class="navigation__wrapper">
         <ul class="inner navigation__inner">
           <li class="navigation__icon">
-            <a><i class="fab fa-facebook-f fa-2x"></i></a>
+            <a href="#"><i class="fab fa-facebook-f fa-2x"></i></a>
           </li>
           <li class="navigation__icon">
-            <a><i class="fab fa-dribbble fa-2x"></i></a>
+            <a href="#"><i class="fab fa-dribbble fa-2x"></i></a>
           </li>
           <li class="navigation__icon">
-            <a><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
           </li>
           <li class="navigation__icon">
-            <a><i class="fas fa-envelope fa-2x"></i></a>
+            <a href="#"><i class="fas fa-envelope fa-2x"></i></a>
           </li>
         </ul>
       </nav>
@@ -140,4 +140,3 @@
      </footer>
   </body>
 </html>
-
